Fix double scrollbar for retina screens

--- a/style/modules/_base.scss
+++ b/style/modules/_base.scss
@@ -1,10 +1,5 @@
 // main: ../flattish.scss
 
-html,
-body {
-  overflow-x: hidden;
-}
-
 * {
   font-family: $font-stack;
   outline: none;
@@ -71,23 +66,6 @@ body {
 
     background-attachment: scroll, fixed;
   }
-
-  @if $random-header {
-    &.loggedin::before { display: none; }
-  }
 }
 
 .md { max-width: unset; }
-
-#wikiactions a,
-#moderation_tools a,
-.footer a,
-.bottommenu a {
-	@include link-underline-transition;
-}
-
-@media (max-resolution: 1dppx) {
-  body {
-    overflow-x: initial;
-  }
-}
